// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataViewTable component should render correctly 1`] = `
<div>
  <table
    aria-label="Repositories table"
    class="pf-v6-c-table pf-m-grid-md"
    data-ouia-component-id="TableExample"
    data-ouia-component-type="PF6/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class="pf-v6-c-table__thead"
      data-ouia-component-id="TableExample-thead"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-head"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-v6-c-table__th"
          data-ouia-component-id="TableExample-th-0"
          scope="col"
          tabindex="-1"
        >
          Repositories
        </th>
        <th
          class="pf-v6-c-table__th"
          data-ouia-component-id="TableExample-th-1"
          scope="col"
          tabindex="-1"
        >
          Branches
        </th>
        <th
          class="pf-v6-c-table__th"
          data-ouia-component-id="TableExample-th-2"
          scope="col"
          tabindex="-1"
        >
          Pull requests
        </th>
        <th
          class="pf-v6-c-table__th"
          data-ouia-component-id="TableExample-th-3"
          scope="col"
          tabindex="-1"
        >
          Workspaces
        </th>
        <th
          class="pf-v6-c-table__th"
          data-ouia-component-id="TableExample-th-4"
          scope="col"
          tabindex="-1"
        >
          Last commit
        </th>
      </tr>
    </thead>
    <tbody
      class="pf-v6-c-table__tbody"
      role="rowgroup"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-0"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-0-0"
          tabindex="-1"
        >
          Repository one
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-0-1"
          tabindex="-1"
        >
          Branch one
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-0-2"
          tabindex="-1"
        >
          Pull request one
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-0-3"
          tabindex="-1"
        >
          Workspace one
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-0-4"
          tabindex="-1"
        >
          Timestamp one
        </td>
      </tr>
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-1"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-1-0"
          tabindex="-1"
        >
          Repository two
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-1-1"
          tabindex="-1"
        >
          Branch two
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-1-2"
          tabindex="-1"
        >
          Pull request two
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-1-3"
          tabindex="-1"
        >
          Workspace two
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-1-4"
          tabindex="-1"
        >
          Timestamp two
        </td>
      </tr>
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-2"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-2-0"
          tabindex="-1"
        >
          Repository three
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-2-1"
          tabindex="-1"
        >
          Branch three
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-2-2"
          tabindex="-1"
        >
          Pull request three
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-2-3"
          tabindex="-1"
        >
          Workspace three
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-2-4"
          tabindex="-1"
        >
          Timestamp three
        </td>
      </tr>
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-3"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-3-0"
          tabindex="-1"
        >
          Repository four
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-3-1"
          tabindex="-1"
        >
          Branch four
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-3-2"
          tabindex="-1"
        >
          Pull request four
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-3-3"
          tabindex="-1"
        >
          Workspace four
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-3-4"
          tabindex="-1"
        >
          Timestamp four
        </td>
      </tr>
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-4"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-4-0"
          tabindex="-1"
        >
          Repository five
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-4-1"
          tabindex="-1"
        >
          Branch five
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-4-2"
          tabindex="-1"
        >
          Pull request five
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-4-3"
          tabindex="-1"
        >
          Workspace five
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-4-4"
          tabindex="-1"
        >
          Timestamp five
        </td>
      </tr>
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-5"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-5-0"
          tabindex="-1"
        >
          Repository six
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-5-1"
          tabindex="-1"
        >
          Branch six
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-5-2"
          tabindex="-1"
        >
          Pull request six
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-5-3"
          tabindex="-1"
        >
          Workspace six
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-5-4"
          tabindex="-1"
        >
          Timestamp six
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataViewTable component should render with a loading state 1`] = `
<div>
  <div
    class="pf-v6-l-stack"
    data-ouia-component-id="DataView-stack"
  >
    <div
      class="pf-v6-l-stack__item"
      data-ouia-component-id="DataView-stack-item-0"
    >
      <table
        aria-label="Repositories table"
        class="pf-v6-c-table pf-m-grid-md"
        data-ouia-component-id="TableExample"
        data-ouia-component-type="PF6/Table"
        data-ouia-safe="true"
        role="grid"
      >
        <thead
          class="pf-v6-c-table__thead"
          data-ouia-component-id="TableExample-thead"
        >
          <tr
            class="pf-v6-c-table__tr"
            data-ouia-component-id="TableExample-tr-head"
            data-ouia-component-type="PF6/TableRow"
            data-ouia-safe="true"
          >
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="TableExample-th-0"
              scope="col"
              tabindex="-1"
            >
              Repositories
            </th>
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="TableExample-th-1"
              scope="col"
              tabindex="-1"
            >
              Branches
            </th>
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="TableExample-th-2"
              scope="col"
              tabindex="-1"
            >
              Pull requests
            </th>
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="TableExample-th-3"
              scope="col"
              tabindex="-1"
            >
              Workspaces
            </th>
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="TableExample-th-4"
              scope="col"
              tabindex="-1"
            >
              Last commit
            </th>
          </tr>
        </thead>
        Data is loading
      </table>
    </div>
  </div>
</div>
`;

exports[`DataViewTable component should render with an empty state 1`] = `
<div>
  <div
    class="pf-v6-l-stack"
    data-ouia-component-id="DataView-stack"
  >
    <div
      class="pf-v6-l-stack__item"
      data-ouia-component-id="DataView-stack-item-0"
    >
      <table
        aria-label="Repositories table"
        class="pf-v6-c-table pf-m-grid-md"
        data-ouia-component-id="TableExample"
        data-ouia-component-type="PF6/Table"
        data-ouia-safe="true"
        role="grid"
      >
        <thead
          class="pf-v6-c-table__thead"
          data-ouia-component-id="TableExample-thead"
        >
          <tr
            class="pf-v6-c-table__tr"
            data-ouia-component-id="TableExample-tr-head"
            data-ouia-component-type="PF6/TableRow"
            data-ouia-safe="true"
          >
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="TableExample-th-0"
              scope="col"
              tabindex="-1"
            >
              Repositories
            </th>
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="TableExample-th-1"
              scope="col"
              tabindex="-1"
            >
              Branches
            </th>
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="TableExample-th-2"
              scope="col"
              tabindex="-1"
            >
              Pull requests
            </th>
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="TableExample-th-3"
              scope="col"
              tabindex="-1"
            >
              Workspaces
            </th>
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="TableExample-th-4"
              scope="col"
              tabindex="-1"
            >
              Last commit
            </th>
          </tr>
        </thead>
        No data found
      </table>
    </div>
  </div>
</div>
`;

exports[`DataViewTable component should render with an error state 1`] = `
<div>
  <div
    class="pf-v6-l-stack"
    data-ouia-component-id="DataView-stack"
  >
    <div
      class="pf-v6-l-stack__item"
      data-ouia-component-id="DataView-stack-item-0"
    >
      <table
        aria-label="Repositories table"
        class="pf-v6-c-table pf-m-grid-md"
        data-ouia-component-id="TableExample"
        data-ouia-component-type="PF6/Table"
        data-ouia-safe="true"
        role="grid"
      >
        <thead
          class="pf-v6-c-table__thead"
          data-ouia-component-id="TableExample-thead"
        >
          <tr
            class="pf-v6-c-table__tr"
            data-ouia-component-id="TableExample-tr-head"
            data-ouia-component-type="PF6/TableRow"
            data-ouia-safe="true"
          >
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="TableExample-th-0"
              scope="col"
              tabindex="-1"
            >
              Repositories
            </th>
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="TableExample-th-1"
              scope="col"
              tabindex="-1"
            >
              Branches
            </th>
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="TableExample-th-2"
              scope="col"
              tabindex="-1"
            >
              Pull requests
            </th>
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="TableExample-th-3"
              scope="col"
              tabindex="-1"
            >
              Workspaces
            </th>
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="TableExample-th-4"
              scope="col"
              tabindex="-1"
            >
              Last commit
            </th>
          </tr>
        </thead>
        Some error
      </table>
    </div>
  </div>
</div>
`;
